feat: register return token
